# meson-sample-project

./: .clang-format  .clang-tidy  Dockerfile  LICENCE  LICENSE  README.md  meson.build  meson_options.txt
bench/: meson.build
bench/bar/: barbench.cpp  meson.build
bench/foo/: foobench.cpp  meson.build
benchmarks/: meson.build
benchmarks/bar/: barbenchmark.cc  meson.build
benchmarks/foo/: foobenchmark.cc  meson.build
doc/: Doxyfile.in  meson.build
docs/: Doxyfile.in  meson.build
include/: meson.build
include/bar/: bar.h  bar.hpp  meson.build
include/foo/: foo.h  foo.hpp  meson.build
src/: main.cc  main.cpp  meson.build
src/bar/: bar.cc  bar.cpp  meson.build
src/foo/: foo.cc  foo.cpp  meson.build
subprojects/: .gitignore  gtest.wrap
test/: meson.build
test/bar/: bartest.cpp  meson.build
test/foo/: footest.cpp  meson.build
tests/: meson.build
tests/bar/: bartest.cc  meson.build
tests/foo/: footest.cc  meson.build
